fix overflow for archive viewer

--- a/front/src/components/SlackSnippet.css
+++ b/front/src/components/SlackSnippet.css
@@ -26,16 +26,3 @@
 .snippet-main {
   /* margin-left: 40px; */
 }
-
-.snippet-text {
-  /* breaks and hyphens - https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/ */
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  -ms-word-break: break-all;
-  word-break: break-all;
-  word-break: break-word;
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
-}
